product list and product details page is completed

--- a/brocartproject/templates/product_detail.html
+++ b/brocartproject/templates/product_detail.html
@@ -1,7 +1,6 @@
 {% extends 'blank_layout.html' %}
-
 <!-- Main contents -->
 {% block content %}
-{% include 'products_list.html' %}
+{% include 'product_description.html' %}
 {% endblock content %}
 
