account management is completed

--- a/brocartproject/templates/account.html
+++ b/brocartproject/templates/account.html
@@ -15,14 +15,22 @@
         RegForm.style.transform = "translatex(0px)";
         LoginForm.style.transform = "translatex(0px)";
         Indicator.style.transform = "translateX(100px)";
-
     }
     function login() {
         RegForm.style.transform = "translatex(300px)";
         LoginForm.style.transform = "translatex(300px)";
         Indicator.style.transform = "translate(0px)";
-
     }
 </script>
+{% if register %}
+    <script>
+        register()
+    </script>
+    {% else %}
+    <script>
+        login()
+    </script>
+{% endif %}
+
 {% endblock extra_script %}
 {% endblock content %}
