--- a/brocartproject/templates/menu.html
+++ b/brocartproject/templates/menu.html
@@ -7,9 +7,15 @@
         <ul id="MenuItems">
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'list_products' %}">Products</a></li>
+            {% if not user.is_authenticated %}
             <li><a href="{% url 'show_account' %}">Account</a></li>
+            {% else %}
+            <li><a href="{% url 'sign_out' %}">Logout</a></li>
+            {% endif %}
         </ul>
     </nav>
+    {% if user.is_authenticated %}
     <a href="{% url 'cart' %}"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a>
+    {% endif %}
     <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
 </div>
